# sentinelpy

./: AUTHORS.md  CODEOWNERS  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: new-pbi-template.md
.github/workflows/: auto-approve.yml  dependabot-auto-merge.yml  piprelease.yml  pythonpackage.yml
query_sentinel_products/: __init__.py  exceptions.py  main.py  query_sentinel_products.py  query_sentinel_products_response.py
query_sentinel_products/request/: __init__.py  model.py  request_query_builder.py  sentinel_product_request_builder.py  validate_query_builder_args.py  value_formatters.py
sentinelpy/: __init__.py  main.py  query_sentinel_products_response.py
sentinelpy/request/: model.py  sentinel_product_request_builder.py  validate_query_builder_args.py  value_formatters.py
tests/: __init__.py  test_query_sentinel_hub.py  test_query_sentinel_products.py  test_query_sentinel_products_response.py  test_readme.py  utils.py
tests/data/: sentinel.api.json
tests/request/: test_request_query_builder.py  test_sentinel_product_request_builder.py  test_validate_query_builder_args.py  test_value_formatters.py
