[tool.poetry]
name = "query_sentinel_products"
version = "0.1.0"
authors = [
    "UK Hydrographic Office <datascienceandengineering@ukho.gov.uk>"
]
description = "Queries ESA Sentinel APIs for products"
license = "MIT license"
keywords = [
    "FIXME",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

homepage = "https://github.com/UKHO/query_sentinel_products"
repository = "https://github.com/UKHO/query_sentinel_products"

readme = "README.md"

# Do not manually edit, use poetry add/remove (--dev) to manage dependencies
[tool.poetry.dependencies]
mypy = "^0.782"
python = "^3.6"
boto3 = "^1.15.16"

[tool.poetry.dev-dependencies]
assertpy = "^1.0"
bandit = "^1.6.2"
black = "^19.10b0"
coverage = "^5.3"
flake8 = "^3.8.3"
isort = "^5.1.0"
liccheck = "^0.4.7"
pytest-cov = "^2.10.0"
pytest-runner = "^5.2"
pytest = "^5.4.3"
tox-gh-actions = "^1.2.0"
tox = "^3.15.2"
toml = "^0.10.1"

[tool.pytest.ini_options]
addopts = "--cov=query_sentinel_products --cov-fail-under=95"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
