[tool.poetry]
name = "sentinelpy"
version = "0.1.0"
authors = [
    "UK Hydrographic Office <datascienceandengineering@ukho.gov.uk>"
]
description = "Queries ESA Sentinel APIs for products"
license = "MIT license"
keywords = [
    "SentinelHub",
    "Copernicus Open Access Hub"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed"
]

homepage = "https://github.com/UKHO/sentinelpy"
repository = "https://github.com/UKHO/sentinelpy"

readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/UKHO/sentinelpy/issues"

# Do not manually edit, use poetry add/remove (--dev) to manage dependencies
[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
assertpy = "^1.1"
bandit = "^1.7.1"
black = "^19.10b0"
coverage = "^6.2"
flake8 = "^4.0.1"
isort = "^5.8.0"
liccheck = "^0.6.4"
pytest-cov = "^3.0.0"
pytest-runner = "^5.3"
pytest = "^6.2.5"
tox-gh-actions = "^2.9.0"
tox = "^3.24.4"
toml = "^0.10.2"
responses = "^0.16.0"
mypy = "^0.812"

[tool.pytest.ini_options]
addopts = "--cov=sentinelpy --cov-fail-under=95"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
